# Distro_project

./: .gitignore  Distro_Report.docx  README.md
auth/: auth.cabal  stack.yaml  text.txt
auth/src/: Lib.hs
client/: client.cabal
client/src/: Lib.hs
dfs/: dfs.cabal
dfs/.stack-work/install/x86_64-linux/lts-7.10/8.0.1/flag-cache/: dfs-0.1.0.0-6DBmiX6znMZBGvYhdmK5z3
dfs/.stack-work/install/x86_64-linux/lts-7.10/8.0.1/lib/x86_64-linux-ghc-8.0.1/dfs-0.1.0.0-6DBmiX6znMZBGvYhdmK5z3/: Lib.dyn_hi
dfs/src/: Lib.hs
directory/: directory.cabal
distFileSys/: README.md  distFileSys.cabal  stack.yaml
distFileSys/app/: Main.hs
distFileSys/src/: Lib.hs
fileService/: fileService.cabal
project/: project.cabal
project/src/: Lib.hs
servant/: servant.cabal
